--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- place background of website -->
   <style>
       body {
-      background-image:url('/design/Background2-01.png');
+      background-image:url('images/Background2-01.png');
       background-repeat:no-repeat;
       background-size: cover;
     }
