--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <link rel='stylesheet' href="scss/style.css">
 
 <!-- place background of website -->
-  <style>
+  <!-- <style>
       body {
       background-image:url('images/Background2-01.png');
       background-repeat:no-repeat;
       background-size: cover;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
