--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
   <link rel='stylesheet' href="scss/style.css">
+  
+  <!-- link to favicon of website -->
+  <link rel="shortcut icon" type="images/sb-icon" href="favicon.ico" />
 
 <!-- place background of website -->
   <!-- <style>
