--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel='stylesheet' href="scss/style.css">
   
   <!-- link to favicon of website -->
-  <link rel="shortcut icon" type="images/sb-icon" href="favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 <!-- place background of website -->
   <!-- <style>
