--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <!-- create meta data tags -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
   <title>Sierra Bonilla | Engineering Portfolio</title>
+
+  <!-- link to favicon of website -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- create meta data tags -->
   <meta content="I am Sierra Bonilla. I am a Biomedical Engineer with 4 years of research and engineering experience at 
   University of Washington, Otonexus Medical Technologies, University College London, and Intellectual Ventures. This is
   my engineering portfolio." name="description">
@@ -17,18 +21,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
   <link rel='stylesheet' href="scss/style.css">
-  
-  <!-- link to favicon of website -->
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
-<!-- place background of website -->
-  <!-- <style>
-      body {
-      background-image:url('images/Background2-01.png');
-      background-repeat:no-repeat;
-      background-size: cover;
-    }
-  </style> -->
 </head>
 
 <body>
