--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   University of Washington, Otonexus Medical Technologies, University College London, and Intellectual Ventures. This is
   my engineering portfolio." name="description">
   <meta name="author" content="Sierra Bonilla">
+  <meta property="og:title" content="Sierra Bonilla" />
+  <meta property="og:description" content="Engineering Portfolio" />
+  <meta property="og:image" content="images/featuredimage.png" />
 
   <!--link external fonts and style sheet-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
