--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <!--link external fonts and style sheet-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
-  <link rel='stylesheet' href="scss/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet'>
+  <link rel='stylesheet' href="style.css">
 
 </head>
 
@@ -34,21 +34,13 @@
 
     <nav class="flex flex-jc-sb">
 
-      <a class ="header__logo" href="/" >
-        <img src="images/smile.svg" alt="smiley"/>
-      </a>
-
-      <a class ="header__navigation" href="#" >
-        <span></span>
-        <span></span>
-        <span></span>
-      </a>
+      <h1>SIERRA   M   BONILLA</h1>
 
     </nav>
 
   </header>
 
-  <!-- <h1>Welcome to My Page</h1> -->
+  Under construction!
 
   <script src="app/js/script.js"></script>
 </body>
