a bunch of changes

--- a/index.html
+++ b/index.html
@@ -1,47 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <head>
+    <title>Sierra Bonilla | Engineering Portfolio</title>
 
-  
-  <title>Sierra Bonilla | Engineering Portfolio</title>
+    <!-- link to favicon of website -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <!-- link to favicon of website -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- create meta data tags -->
+    <meta content="I am Sierra Bonilla. I am a Biomedical Engineer with 4 years of research and engineering experience at 
+    University of Washington, Otonexus Medical Technologies, University College London, and Intellectual Ventures. This is
+    my engineering portfolio." name="description">
+    <meta name="author" content="Sierra Bonilla">
+    <meta property="og:title" content="Sierra Bonilla" />
+    <meta property="og:description" content="Engineering Portfolio" />
+    <meta property="og:image" content="images/featuredimage.png" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <!-- create meta data tags -->
-  <meta content="I am Sierra Bonilla. I am a Biomedical Engineer with 4 years of research and engineering experience at 
-  University of Washington, Otonexus Medical Technologies, University College London, and Intellectual Ventures. This is
-  my engineering portfolio." name="description">
-  <meta name="author" content="Sierra Bonilla">
-  <meta property="og:title" content="Sierra Bonilla" />
-  <meta property="og:description" content="Engineering Portfolio" />
-  <meta property="og:image" content="images/featuredimage.png" />
+    <!--link external fonts and style sheet-->
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet'>
+    <link rel='stylesheet' href="style.css">
 
-  <!--link external fonts and style sheet-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet'>
-  <link rel='stylesheet' href="style.css">
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- create header -->
+    <header>
 
-  <!-- create header -->
-  <header class="header">
+      <nav>
+        <div class="title">
+          <h1>SIERRA   M   BONILLA</h1>
+        </div>
+        <div class="right-links">
+          <a class="links selected" href="index.html">PORTFOLIO</a>
+          <a class="links" href="aboutme.html">ABOUT</a>
+        </div>
+      </nav>
 
-    <nav class="flex flex-jc-sb">
+      <hr/>
 
-      <h1>SIERRA   M   BONILLA</h1>
+    </header>
 
-    </nav>
+    <main>
 
-  </header>
+      <div>
 
-  Under construction!
+        <a href="ImgReg.html"><div class="grid_cell">
+           <img class="grid_image" src="images/smile.svg">
+           <div class="cell_hover">
+               <div class="cell_title">TEST</div>
+           </div>    
+        </div></a>
 
-  <script src="app/js/script.js"></script>
-</body>
+        <a href="ImgReg.html"><div class="grid_cell">
+          <img class="grid_image" src="images/smile.svg">
+          <div class="cell_hover">
+              <div class="cell_title">TEST</div>
+          </div>    
+        </div></a>
+
+        <a href="ImgReg.html"><div class="grid_cell">
+          <img class="grid_image" src="images/smile.svg">
+          <div class="cell_hover">
+              <div class="cell_title">TEST</div>
+          </div>    
+       </div></a>
+
+        <a href="ImgReg.html"><div class="grid_cell">
+          <img class="grid_image" src="images/smile.svg">
+          <div class="cell_hover">
+              <div class="cell_title">TEST</div>
+          </div>    
+        </div></a>
+       
+      </div>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
+    <script src="app/js/script.js"></script>
+  </body>
 </html>
