a bunch of stuff

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <nav>
         <div class="title">
-          <h1>SIERRA   M   BONILLA</h1>
+          <h1>SIERRA   BONILLA</h1>
         </div>
         <div class="right-links">
           <a class="links selected" href="index.html">PORTFOLIO</a>
@@ -78,10 +78,32 @@
 
     </main>
 
-    <footer>
+    <hr/>
+
+    <footer class="footer">
+
+      <div class = "social-footer">
+
+        <p1 class = "copyright">Copyright © Sierra Bonilla 2022</p1>
+        
+        <a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank">
+          <ion-icon  class="icon_scale" name="logo-linkedin"></ion-icon>
+        </a>
+
+        <a href="https://github.com/smbonilla" target="_blank">
+          <ion-icon class="icons icon_scale" name="logo-github"></ion-icon>
+        </a>
+        
+        <a href="mailto:sierrabonilla14@gmail.com" target="_blank">
+          <ion-icon class="icons icon_scale"  name="mail"></ion-icon>
+        </a>
+
+      </div>
 
     </footer>
 
     <script src="app/js/script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
   </body>
 </html>
