--- a/index.html
+++ b/index.html
@@ -80,27 +80,27 @@
 
     <hr/>
 
-    <footer class="footer">
+    <div id="footer">
 
       <div class = "social-footer">
 
         <p1 class = "copyright">Copyright © Sierra Bonilla 2022</p1>
-        
-        <a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank">
-          <ion-icon  class="icon_scale" name="logo-linkedin"></ion-icon>
-        </a>
 
-        <a href="https://github.com/smbonilla" target="_blank">
-          <ion-icon class="icons icon_scale" name="logo-github"></ion-icon>
-        </a>
-        
-        <a href="mailto:sierrabonilla14@gmail.com" target="_blank">
-          <ion-icon class="icons icon_scale"  name="mail"></ion-icon>
-        </a>
+        <ul class = "socials-list">
+          <li class="social-item"><a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank">
+            <ion-icon name="logo-linkedin"></ion-icon>
+          </a></li>
+          <li class="social-item"><a href="https://github.com/smbonilla" target="_blank">
+            <ion-icon name="logo-github"></ion-icon>
+          </a></li>
+          <li class="social-item"><a href="mailto:sierrabonilla14@gmail.com" target="_blank">
+            <ion-icon name="mail"></ion-icon>
+          </a></li>
+        </ul>
 
       </div>
 
-    </footer>
+    </div>
 
     <script src="app/js/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
