--- a/aboutme.html
+++ b/aboutme.html
@@ -25,38 +25,64 @@
 
   <body>
 
-    <!-- create header -->
-    <header>
+    <div id ="container">
 
-      <nav>
-        <div class="title">
-          <h1>SIERRA   BONILLA</h1>
+        <!-- create header -->
+        <div id="header">
+
+            <nav>
+            <div class="title">
+                <h1>SIERRA   BONILLA</h1>
+            </div>
+            <div class="right-links">
+                <a class="links" href="index.html">PORTFOLIO</a>
+                <a class="links selected" href="aboutme.html">ABOUT</a>
+            </div>
+            </nav>
+
         </div>
-        <div class="right-links">
-          <a class="links" href="index.html">PORTFOLIO</a>
-          <a class="links selected" href="aboutme.html">ABOUT</a>
+
+        <hr/>
+
+        <div id ="body">
+
+            <a href="ImgReg.html">
+                <div class="grid_cell">
+                    <img class="grid_image" src="images/smile.svg">
+                    <div class="cell_hover">
+                        <div class="cell_title">TEST</div>
+                    </div>    
+                </div>
+            </a>
+
+         </div>
+
+        <div id="footer">
+
+            <div class = "social-footer">
+
+                <p1 class = "copyright">Copyright © Sierra Bonilla 2022</p1>
+
+                <ul class = "socials-list">
+                    <li class="social-item"><a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank">
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                    </a></li>
+                    <li class="social-item"><a href="https://github.com/smbonilla" target="_blank">
+                    <ion-icon name="logo-github"></ion-icon>
+                    </a></li>
+                    <li class="social-item"><a href="mailto:sierrabonilla14@gmail.com" target="_blank">
+                    <ion-icon name="mail"></ion-icon>
+                    </a></li>
+                </ul>
+
+            </div>
+
         </div>
-      </nav>
 
-      <hr/>
-
-    </header>
-
-    <main>
-
-      <div>
-
-        <a href="ImgReg.html"><div class="grid_cell">
-          <img class="grid_image" src="images/smile.svg">
-          <div class="cell_hover">
-              <div class="cell_title">TEST</div>
-          </div>    
-        </div></a>
-       
-      </div>
-
-    </main>
+    </div>
 
     <script src="app/js/script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
   </body>
 </html>
