--- a/imagereg.html
+++ b/imagereg.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sierra Bonilla | About Me</title>
+    <title>Sierra Bonilla | Image Registration</title>
 
     <!-- link to favicon of website -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,7 +12,7 @@
     my engineering portfolio." name="description">
     <meta name="author" content="Sierra Bonilla">
     <meta property="og:title" content="Sierra Bonilla" />
-    <meta property="og:description" content="About Me" />
+    <meta property="og:description" content="Ultrasound-Based Image Registration" />
     <meta property="og:image" content="images/featuredimage.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -40,7 +40,7 @@
                 </div>
                 <div class="right-links">
                     <a class="links" href="index.html">PORTFOLIO</a>
-                    <a class="links selected" href="aboutme.html">ABOUT</a>
+                    <a class="links" href="aboutme.html">ABOUT</a>
                 </div>
             </nav>
 
@@ -50,16 +50,7 @@
 
         <div id ="body">
 
-            <a href="ImgReg.html">
-                <div class="grid_cell">
-                    <img class="grid_image" src="images/smile.svg">
-                    <div class="cell_hover">
-                        <div class="cell_title">TEST</div>
-                    </div>    
-                </div>
-            </a>
-
-         </div>
+        </div>
 
         <div id="footer">
 
