--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
         <nav>
           <div class="title">
-            <h1>SIERRA   BONILLA</h1>
+            <a class = "titlelink" href="aboutme.html">
+              <h1>SIERRA   BONILLA</h1>
+            </a>
           </div>
           <div class="right-links">
             <a class="links selected" href="index.html">PORTFOLIO</a>
@@ -46,7 +48,7 @@
 
       <div id ="body">
 
-        <a href="ImgReg.html">
+        <a href="imagereg.html">
           <div class="grid_cell">
             <img class="grid_image" src="images/smile.svg">
             <div class="cell_hover">
