--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
             <img class="grid_image" src="images/smile.svg">
             <div class="cell_hover">
                 <div class="cell_title">TEST</div>
+            </div> 
+          </div>
+        </a>
+
+        <a href="ImgReg.html">
+          <div class="grid_cell">
+            <img class="grid_image" src="images/smile.svg">
+            <div class="cell_hover">
+                <div class="cell_title">TEST</div>
+            </div>    
+          </div>
+        </a>
+
+        <a href="ImgReg.html">
+          <div class="grid_cell">
+            <img class="grid_image" src="images/smile.svg">
+            <div class="cell_hover">
+                <div class="cell_title">TEST</div>
             </div>    
           </div>
         </a>
@@ -94,15 +112,21 @@
           <p1 class = "copyright">Copyright © Sierra Bonilla 2022</p1>
 
           <ul class = "socials-list">
-            <li class="social-item"><a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank">
-              <ion-icon name="logo-linkedin"></ion-icon>
-            </a></li>
-            <li class="social-item"><a href="https://github.com/smbonilla" target="_blank">
-              <ion-icon name="logo-github"></ion-icon>
-            </a></li>
-            <li class="social-item"><a href="mailto:sierrabonilla14@gmail.com" target="_blank">
-              <ion-icon name="mail"></ion-icon>
-            </a></li>
+            <li class="social-item">
+              <a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank">
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://github.com/smbonilla" target="_blank">
+                <ion-icon name="logo-github"></ion-icon>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="mailto:sierrabonilla14@gmail.com" target="_blank">
+                <ion-icon name="mail"></ion-icon>
+              </a>
+            </li>
           </ul>
 
         </div>
