added a bunch to aboutme

--- a/aboutme.html
+++ b/aboutme.html
@@ -50,14 +50,24 @@
 
         <div id ="body">
 
-            <a href="ImgReg.html">
-                <div class="grid_cell">
-                    <img class="grid_image" src="images/smile.svg">
-                    <div class="cell_hover">
-                        <div class="cell_title">TEST</div>
-                    </div>    
+            <div class = "col_1">
+                <img class = "headshot" src="images/headshot.png" alt="headshot">
+                <div>
+                    <h3>Hi! Nice to meet you.</h3>
+                    <h4>I am a multi-disciplinary Engineer.</h4>
                 </div>
-            </a>
+                <div class="CV">
+                    <a href="CV/BonillaCV.pdf" download="BonillaCV" class="CVlink">Download Resume</a>
+                </div>
+            </div>
+
+            <div class = "col_2">
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="images/bubbles-desktop.png">
+                    <source media="(max-width: 700px)" srcset="images/bubbles-mobile.png">
+                    <img src="images/bubbles-desktop.png" alt = "Sierra's Bubbles">
+                </picture>
+            </div>
 
          </div>
 
