about me responsive update

--- a/aboutme.html
+++ b/aboutme.html
@@ -54,7 +54,23 @@
                 <img class = "headshot" src="images/headshot.png" alt="headshot">
                 <div>
                     <h3>Hi! Nice to meet you.</h3>
-                    <h4>I am a multi-disciplinary Engineer.</h4>
+                    <h4>
+                        <p>My name is Sierra and I am a multi-disciplinary Engineer.</p>
+                        <p>Currently I am pursuing a Master of Science in Medical Physics
+                            & Biomedical Engineering with expectation of graduation in September
+                            2022. I will be pursuing an interdisciplinary PhD in the faculties of 
+                            Computer Science, Medical Physics & Biomedical Engineering, 
+                            and Clinical and Movement Neurosciences in September 2023 on a project that
+                            will investigate deep learning techniques to acquire images of the adult human
+                            brain using ultrasound computed tomography. 
+                        </p>
+                        <p>I am looking for an internship in industry for the next year where I can continue 
+                            to develop my software development skills. I have experience working in start-up
+                            environments and enjoy high-impact versatile roles. I am highly multi-disciplinary, 
+                            but some of my specialties include medical imaging, DSP, MATLAB, Python, research
+                            planning and execution. 
+                        </p>
+                    </h4>
                 </div>
                 <div class="CV">
                     <a href="CV/BonillaCV.pdf" download="BonillaCV" class="CVlink">Download Resume</a>
@@ -63,8 +79,8 @@
 
             <div class = "col_2">
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="images/bubbles-desktop.png">
-                    <source media="(max-width: 700px)" srcset="images/bubbles-mobile.png">
+                    <source media="(min-width: 1200px)" srcset="images/bubbles-desktop.png">
+                    <source media="(max-width: 1200px)" srcset="images/bubbles-mobile.png">
                     <img src="images/bubbles-desktop.png" alt = "Sierra's Bubbles">
                 </picture>
             </div>
