about me done for now

--- a/aboutme.html
+++ b/aboutme.html
@@ -56,18 +56,18 @@
                     <h3>Hi! Nice to meet you.</h3>
                     <h4>
                         <p>My name is Sierra and I am a multi-disciplinary Engineer.</p>
-                        <p>Currently I am pursuing a Master of Science in Medical Physics
-                            & Biomedical Engineering with expectation of graduation in September
+                        <p>I am currently pursuing a Master of Science in Medical Physics
+                            & Biomedical Engineering expecting to graduate in September
                             2022. I will be pursuing an interdisciplinary PhD in the faculties of 
                             Computer Science, Medical Physics & Biomedical Engineering, 
-                            and Clinical and Movement Neurosciences in September 2023 on a project that
-                            will investigate deep learning techniques to acquire images of the adult human
+                            and Clinical and Movement Neurosciences in September 2023 at University College
+                            London on a project that will investigate deep learning techniques to acquire images of the adult human
                             brain using ultrasound computed tomography. 
                         </p>
                         <p>I am looking for an internship in industry for the next year where I can continue 
-                            to develop my software development skills. I have experience working in start-up
-                            environments and enjoy high-impact versatile roles. I am highly multi-disciplinary, 
-                            but some of my specialties include medical imaging, DSP, MATLAB, Python, research
+                            to develop my software engineering skills. I have experience working in start-up
+                            environments and enjoy high-impact versatile roles. I am highly multi-disciplinary 
+                            and eager to learn, but some of my specialties include medical imaging, DSP, MATLAB, Python, research
                             planning and execution. 
                         </p>
                     </h4>
