updates of projects

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 
       <div id ="body">
 
-        <a href="imagereg.html">
+        <a href="imagereg.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/smile.svg">
+            <img class="grid_image" src="images/PosterFinal.png" alt="MSc Poster Board">
             <div class="cell_hover">
-                <div class="cell_title">TEST</div>
+                <div class="cell_title">Ultrasound-Based Skull Registration for Transcranial Ultrasound Stimulation</div>
             </div> 
           </div>
         </a>
 
-        <a href="ImgReg.html">
+        <a href="ImgReg.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/smile.svg">
             <div class="cell_hover">
@@ -66,7 +66,7 @@
           </div>
         </a>
 
-        <a href="ImgReg.html">
+        <a href="ImgReg.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/smile.svg">
             <div class="cell_hover">
@@ -75,7 +75,7 @@
           </div>
         </a>
 
-        <a href="ImgReg.html">
+        <a href="ImgReg.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/smile.svg">
             <div class="cell_hover">
@@ -84,20 +84,20 @@
           </div>
         </a>
 
-        <a href="ImgReg.html">
+        <a href="ImgReg.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/smile.svg">
+            <img class="grid_image" alt = "Published Article" src="images/capstone.png">
             <div class="cell_hover">
-                <div class="cell_title">TEST</div>
+                <div class="cell_title">In-vitro Bubble-Enhanced Heating for Focused Ultrasound Treatments in the Brain</div>
             </div>    
           </div>
         </a>
 
-        <a href="ImgReg.html">
+        <a href="ImgReg.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/smile.svg">
+            <img class="grid_image" src="images/handgif.gif">
             <div class="cell_hover">
-                <div class="cell_title">TEST</div>
+                <div class="cell_title">Robotic Hand EMG-based Control</div>
             </div>    
           </div>
         </a>
@@ -113,17 +113,17 @@
 
           <ul class = "socials-list">
             <li class="social-item">
-              <a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank">
+              <a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank" class = "titlelink">
                 <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
             <li class="social-item">
-              <a href="https://github.com/smbonilla" target="_blank">
+              <a href="https://github.com/smbonilla" target="_blank" class = "titlelink">
                 <ion-icon name="logo-github"></ion-icon>
               </a>
             </li>
             <li class="social-item">
-              <a href="mailto:sierrabonilla14@gmail.com" target="_blank">
+              <a href="mailto:sierrabonilla14@gmail.com" target="_blank" class = "titlelink">
                 <ion-icon name="mail"></ion-icon>
               </a>
             </li>
