--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
           </div>
         </a>
 
-        <a href="ImgReg.html" class = "titlelink">
+        <a href="NFT.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/smile.svg">
+            <img class="grid_image" src="images/CryptHoes.png" alt="NFT Pic">
             <div class="cell_hover">
-                <div class="cell_title">TEST</div>
+                <div class="cell_title">NFT Project</div>
             </div>    
           </div>
         </a>
@@ -84,7 +84,7 @@
           </div>
         </a>
 
-        <a href="ImgReg.html" class = "titlelink">
+        <a href="Capstone.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" alt = "Published Article" src="images/capstone.png">
             <div class="cell_hover">
@@ -93,9 +93,9 @@
           </div>
         </a>
 
-        <a href="ImgReg.html" class = "titlelink">
+        <a href="HandControl.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/handgif.gif">
+            <img class="grid_image" src="images/handgif.gif" alt="Hand Control Gif">
             <div class="cell_hover">
                 <div class="cell_title">Robotic Hand EMG-based Control</div>
             </div>    
