all images on home page up

--- a/index.html
+++ b/index.html
@@ -57,29 +57,31 @@
           </div>
         </a>
 
+
+        <a href="Website.html" class = "titlelink">
+          <div class="grid_cell">
+            <img class="grid_image" src="images/website.png">
+            <div class="cell_hover">
+                <div class="cell_title">Responsive Design Website</div>
+            </div>    
+          </div>
+        </a>
+
+
+        <a href="BrainSpace.html" class = "titlelink">
+          <div class="grid_cell">
+            <img class="grid_image" src="images/brainspace.gif">
+            <div class="cell_hover">
+                <div class="cell_title">Brain-Space: Exploring the Spatial Cell-Type Composition Within the Mouse Brain using Machine Learning</div>
+            </div>    
+          </div>
+        </a>
+
         <a href="NFT.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/CryptHoes.png" alt="NFT Pic">
             <div class="cell_hover">
                 <div class="cell_title">NFT Project</div>
-            </div>    
-          </div>
-        </a>
-
-        <a href="ImgReg.html" class = "titlelink">
-          <div class="grid_cell">
-            <img class="grid_image" src="images/smile.svg">
-            <div class="cell_hover">
-                <div class="cell_title">TEST</div>
-            </div>    
-          </div>
-        </a>
-
-        <a href="ImgReg.html" class = "titlelink">
-          <div class="grid_cell">
-            <img class="grid_image" src="images/smile.svg">
-            <div class="cell_hover">
-                <div class="cell_title">TEST</div>
             </div>    
           </div>
         </a>
