--- a/imagereg.html
+++ b/imagereg.html
@@ -23,7 +23,7 @@
 
   </head>
 
-  <body>
+  <body id="webpage">
 
     <div id ="container">
 
@@ -49,6 +49,10 @@
         <hr/>
 
         <div id ="body">
+
+            <div class="content">
+                hi
+            </div>
 
         </div>
 
