--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  
   <head>
     <title>Sierra Bonilla | Engineering Portfolio</title>
 
@@ -18,12 +19,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <!--link external fonts and style sheet-->
-    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,350,400,700' rel='stylesheet'>
     <link rel='stylesheet' href="style.css">
 
   </head>
 
-  <body>
+  <body id = "webpage">
 
     <div id ="container">
 
@@ -62,7 +63,7 @@
           <div class="grid_cell">
             <img class="grid_image" src="images/website.png">
             <div class="cell_hover">
-                <div class="cell_title">Responsive Design Website</div>
+                <div class="cell_title">Responsive Website Design</div>
             </div>    
           </div>
         </a>
