about me description

--- a/aboutme.html
+++ b/aboutme.html
@@ -55,14 +55,17 @@
                 <div>
                     <h3>Hi! Nice to meet you.</h3>
                     <h4>
-                        <p>My name is Sierra and I am a multi-disciplinary Engineer.</p>
+                        <p>My name is Sierra and I would describe myself as a passionate multi-disciplinary Engineer and 
+                            problem solver.</p>
                         <p>I am currently pursuing a Master of Science in Medical Physics
-                            & Biomedical Engineering expecting to graduate in September
+                            & Biomedical Engineering at University College London expecting to graduate in September
                             2022. I will be pursuing an interdisciplinary PhD in the faculties of 
                             Computer Science, Medical Physics & Biomedical Engineering, 
                             and Clinical and Movement Neurosciences in September 2023 at University College
                             London on a project that will investigate deep learning techniques to acquire images of the adult human
-                            brain using ultrasound computed tomography. 
+                            brain using ultrasound computed tomography. I graduated with a Bachelors of Science in 
+                            Bioengineering and a minor in Mathematics with honors from the University of Washington in Seattle, WA 
+                            in June 2020 and worked for a year in industry as a Medical Device Engineer/Acoustic Engineer in 2020-2021. 
                         </p>
                         <p>I am looking for an internship in industry for the next year where I can continue 
                             to develop my software engineering skills. I have experience working in start-up
