fixed index.html issue

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,14 +32,14 @@
 
             <nav>
                 <div class="title">
-                    <a class = "titlelink" href="index.html">
+                    <a class = "titlelink" href="/">
                         <div class="title">
                             <h1>SIERRA   BONILLA</h1>
                         </div>
                     </a>
                 </div>
                 <div class="right-links">
-                    <a class="links" href="index.html">PORTFOLIO</a>
+                    <a class="links" href="/">PORTFOLIO</a>
                     <a class="links selected" href="aboutme.html">ABOUT</a>
                 </div>
             </nav>
