--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
           </div>
           <div class="right-links">
-            <a class="links selected" href="index.html">PORTFOLIO</a>
+            <a class="links selected" href="/">PORTFOLIO</a>
             <a class="links" href="aboutme.html">ABOUT</a>
           </div>
         </nav>
