--- a/aboutme.html
+++ b/aboutme.html
@@ -76,7 +76,7 @@
                     </h4>
                 </div>
                 <div class="CV">
-                    <a href="CV/BonillaCV.pdf" download="BonillaCV" class="CVlink">Download Resume</a>
+                    <a href="PDF/CV/BonillaCV.pdf" download="BonillaCV" class="CVlink">Download Resume</a>
                 </div>
             </div>
 
