--- a/imagereg.html
+++ b/imagereg.html
@@ -50,8 +50,26 @@
 
         <div id ="body">
 
-            <div class="content">
-                hi
+            <div class="carousel">
+                <button class="carousel__button"></button>
+                <div class="carousel__track-container">
+                    <ul class="carousel__track">
+                        <li class="carousel__slide">
+                            <img src="images/imagereg" alt = "">
+                        </li>
+                        <li class="carousel__slide">
+                            <img src="images/imagereg" alt = "">
+                        </li>
+                        <li class="carousel__slide">
+                            <img src="images/imagereg" alt = "">
+                        </li>
+                    </ul>
+                </div>
+                <button class="carousel__button"></button>
+            </div>
+
+            <div class="CV">
+                <a href="CV/BonillaCV.pdf" download="BonillaDissertation" class="CVlink">Download Dissertation</a>
             </div>
 
         </div>
