switching names and saving diss

--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@
         <div id ="body">
 
             <div class = "col_1">
-                <img class = "headshot" src="images/headshot.png" alt="headshot">
+                <img class = "headshot" src="images/SierraBonilla_headshot.png" alt="headshot">
                 <div>
                     <h3>Hi! Nice to meet you.</h3>
                     <h4>
@@ -82,8 +82,8 @@
 
             <div class = "col_2">
                 <picture>
-                    <source media="(min-width: 1200px)" srcset="images/bubbles-desktop.png">
-                    <source media="(max-width: 1200px)" srcset="images/bubbles-mobile.png">
+                    <source media="(min-width: 1200px)" srcset="images/SierraBonilla_bubbles-desktop.png">
+                    <source media="(max-width: 1200px)" srcset="images/SierraBonilla_bubbles-mobile.png">
                     <img src="images/bubbles-desktop.png" alt = "Sierra's Bubbles">
                 </picture>
             </div>
