--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Sierra Bonilla">
     <meta property="og:title" content="Sierra Bonilla" />
     <meta property="og:description" content="Engineering Portfolio" />
-    <meta property="og:image" content="images/featuredimage.png" />
+    <meta property="og:image" content="images/SierraBonilla_featuredimage.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -51,7 +51,7 @@
 
         <a href="imagereg.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/PosterFinal.png" alt="MSc Poster Board">
+            <img class="grid_image" src="images/SierraBonilla_PosterFinal.png" alt="MSc Poster Board">
             <div class="cell_hover">
                 <div class="cell_title">Ultrasound-Based Skull Registration for Transcranial Ultrasound Stimulation</div>
             </div> 
@@ -61,7 +61,7 @@
 
         <a href="Website.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/website.png">
+            <img class="grid_image" src="images/SierraBonilla_website.png" alt = "Responsive Website">
             <div class="cell_hover">
                 <div class="cell_title">Responsive Website Design</div>
             </div>    
@@ -71,7 +71,7 @@
 
         <a href="BrainSpace.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/brainspace.gif">
+            <img class="grid_image" src="images/SierraBonilla_brainspace.gif" alt="Brain Space">
             <div class="cell_hover">
                 <div class="cell_title">Brain-Space: Exploring the Spatial Cell-Type Composition Within the Mouse Brain using Machine Learning</div>
             </div>    
@@ -80,7 +80,7 @@
 
         <a href="NFT.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/CryptHoes.png" alt="NFT Pic">
+            <img class="grid_image" src="images/SierraBonilla_CryptHoes.png" alt="NFT Pic">
             <div class="cell_hover">
                 <div class="cell_title">NFT Project</div>
             </div>    
@@ -89,7 +89,7 @@
 
         <a href="Capstone.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" alt = "Published Article" src="images/capstone.png">
+            <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.png">
             <div class="cell_hover">
                 <div class="cell_title">In-vitro Bubble-Enhanced Heating for Focused Ultrasound Treatments in the Brain</div>
             </div>    
@@ -98,7 +98,7 @@
 
         <a href="HandControl.html" class = "titlelink">
           <div class="grid_cell">
-            <img class="grid_image" src="images/handgif.gif" alt="Hand Control Gif">
+            <img class="grid_image" src="images/SierraBonilla_handgif.gif" alt="Hand Control Gif">
             <div class="cell_hover">
                 <div class="cell_title">Robotic Hand EMG-based Control</div>
             </div>    
