--- a/imagereg.html
+++ b/imagereg.html
@@ -20,6 +20,7 @@
     <!--link external fonts and style sheet-->
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet'>
     <link rel='stylesheet' href="style.css">
+    <link rel='stylesheet' href="carousel.css">
 
   </head>
 
@@ -51,21 +52,33 @@
         <div id ="body">
 
             <div class="carousel">
-                <button class="carousel__button"></button>
+                <button class="carousel__button carousel__button--left">
+                    <ion-icon name="chevron-back-outline" alt ="left button"></ion-icon>
+                </button>
+
                 <div class="carousel__track-container">
                     <ul class="carousel__track">
                         <li class="carousel__slide">
-                            <img src="images/imagereg" alt = "">
+                            <img src="images/imagereg/SierraBonilla_Dissertation_pg1.png" class = "carousel__image" alt = "disspg1">
                         </li>
                         <li class="carousel__slide">
-                            <img src="images/imagereg" alt = "">
+                            <img src="images/imagereg/SierraBonilla_Dissertation_pg2.png" class = "carousel__image" alt = "disspg2">
                         </li>
                         <li class="carousel__slide">
-                            <img src="images/imagereg" alt = "">
+                            <img src="images/imagereg/SierraBonilla_Dissertation_pg3.png" class = "carousel__image" alt = "disspg3">
                         </li>
                     </ul>
                 </div>
-                <button class="carousel__button"></button>
+
+                <button class="carousel__button carousel__button--right">
+                    <ion-icon name="chevron-forward-outline" alt="right button"></ion-icon>
+                </button>
+            </div>
+
+            <div class="carousel__nav">
+                <button class="carousel__indicator"></button>
+                <button class="carousel__indicator"></button>
+                <button class="carousel__indicator"></button>
             </div>
 
             <div class="CV">
