update to aboutme

--- a/aboutme.html
+++ b/aboutme.html
@@ -63,7 +63,7 @@
                             Computer Science, Medical Physics & Biomedical Engineering, 
                             and Clinical and Movement Neurosciences in September 2023 at University College
                             London on a project that will investigate deep learning techniques to acquire images of the adult human
-                            brain using ultrasound computed tomography. I graduated with a Bachelors of Science in 
+                            skull using ultrasound computed tomography. I graduated with a Bachelors of Science in 
                             Bioengineering and a minor in Mathematics with honors from the University of Washington in Seattle, WA 
                             in June 2020 and worked for a year in industry as a Medical Device Engineer/Acoustic Engineer in 2020-2021. 
                         </p>
