--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
       <div id ="body">
 
-        <a href="imagereg.html" class = "titlelink">
+        <!-- <a href="imagereg.html" class = "titlelink"> -->
+        <a href="construction.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_PosterFinal.png" alt="MSc Poster Board">
             <div class="cell_hover">
@@ -59,7 +60,8 @@
         </a>
 
 
-        <a href="Website.html" class = "titlelink">
+        <!-- <a href="Website.html" class = "titlelink"> -->
+        <a href="construction.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_website.png" alt = "Responsive Website">
             <div class="cell_hover">
@@ -69,7 +71,8 @@
         </a>
 
 
-        <a href="BrainSpace.html" class = "titlelink">
+        <!-- <a href="BrainSpace.html" class = "titlelink"> -->
+        <a href="construction.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_brainspace.gif" alt="Brain Space">
             <div class="cell_hover">
@@ -78,7 +81,8 @@
           </div>
         </a>
 
-        <a href="NFT.html" class = "titlelink">
+        <!-- <a href="NFT.html" class = "titlelink"> -->
+        <a href="construction.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_CryptHoes.png" alt="NFT Pic">
             <div class="cell_hover">
@@ -87,7 +91,8 @@
           </div>
         </a>
 
-        <a href="Capstone.html" class = "titlelink">
+        <!-- <a href="Capstone.html" class = "titlelink"> -->
+        <a href="construction.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.png">
             <div class="cell_hover">
@@ -96,7 +101,8 @@
           </div>
         </a>
 
-        <a href="HandControl.html" class = "titlelink">
+        <!-- <a href="HandControl.html" class = "titlelink"> -->
+        <a href="construction.html" class = "titlelink">
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_handgif.gif" alt="Hand Control Gif">
             <div class="cell_hover">
